<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="SSUWIPE"
            android:fontFamily="@font/vladimir"
            android:textColor="#FF5252"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:textColorHint="#757575"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:textColorHint="#757575"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/sign_up_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/check_password"
            android:textColorHint="#757575"
            android:inputType="textPassword"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/home_sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:text="@string/sign_in"
            android:textColor="#212121"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/home_goback_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:elevation="5dp"
                android:background="#00FFFFFF"
                android:text="@string/goback"
                android:textColor="#757575"
                tools:ignore="NestedWeights"
                style="?android:attr/buttonBarButtonStyle" />



        </LinearLayout>
    </LinearLayout>

</LinearLayout>