<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:weightSum="10">

            <View
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="SSUWIPE"
                android:fontFamily="@font/vladimir"
                android:textColor="#FF5252"
                android:textSize="40sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="right"
                android:layout_weight="2">
                <ImageView
                    android:onClick="clickInfo"
                    android:id="@+id/home_my_info_show_btn"
                    android:layout_gravity="center"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/person_48"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:background="#D7D9DB"
            android:layout_width="match_parent"
            android:layout_height="1sp"

            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FDFDFD"
        android:orientation="vertical">

        <Button
            android:id="@+id/home_swipe_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:elevation="10dp"
            android:background="@drawable/button_round"
            android:text="@string/ssuwipe"
            android:textColor="#4B535D"
            android:fontFamily="@font/scdream5"
            android:textSize="25sp"
            android:drawableBottom="@drawable/swipe"/>

        <Button
            android:id="@+id/home_list_show_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:elevation="10dp"
            android:background="@drawable/button_round"
            android:text="@string/list"
            android:textColor="#4B535D"
            android:textSize="25sp"
            android:fontFamily="@font/scdream5"
            android:drawableBottom="@drawable/list"/>/>

        <Button
            android:id="@+id/home_map_show_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="15dp"
            android:background="@drawable/button_round"
            android:text="@string/map"
            android:textSize="25sp"
            android:textColor="#4B535D"
            android:fontFamily="@font/scdream5"
            android:drawableBottom="@drawable/map"/>/>

        <Button
            android:id="@+id/home_save_show_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            android:background="@drawable/button_round"
            android:text="@string/save"
            android:textSize="25sp"
            android:textColor="#4B535D"
            android:fontFamily="@font/scdream5"
            android:drawableBottom="@drawable/save"/>
    </LinearLayout>

</LinearLayout>